# XQL

offline/: README.md  pyproject.toml
online/: pyproject.toml
